# bioe134-234-transcriptdesigner-project-3-NotAFood

./: .gitignore  README.md  WRITEUP.md  pyproject.toml  tufa_cds.fasta
genedesign/: transcript_designer.py  transcript_to_seq.py
genedesign/checkers/: forbidden_sequence_checker.py  internal_rbs_checker.py
genedesign/seq_utils/: codon_usage.py
tests/benchmarking/: proteome_benchmarker.py
tests/unit/checkers/: test_internal_rbs_checker.py
