[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genedesign"
version = "0.1.0"
description = "A suite of tools for designing genetic constructs"
requires-python = ">=3.8"
dependencies = [
    "pytest>=8.3.5",
]

[tool.setuptools.packages.find]
where = ["."]
